--- a/accounts/templates/accounts/customer.html
+++ b/accounts/templates/accounts/customer.html
@@ -7,7 +7,7 @@
 			<h5>{{customer.name}}</h5>
 			<hr>
 			<a class="btn btn-outline-info  btn-sm btn-block mb-2" href="">Update Customer</a>
-			<a class="btn btn-outline-danger  btn-sm btn-block" href="">Delete Customer</a>
+			<a class="btn btn-outline-success  btn-sm btn-block" href="">Place Order</a>
 
 		</div>
 	</div>
@@ -51,7 +51,7 @@
 		<div class="card card-body">
         <div class="table-responsive">
 
-			<table class="table">
+			<table class="table table-hover">
 				<thead>
 				<tr class="table-info">
 					<th>Product</th>
