--- a/accounts/templates/accounts/dashboard.html
+++ b/accounts/templates/accounts/dashboard.html
@@ -1,19 +1,22 @@
 {% extends 'accounts/main.html' %}
 {% block content %}
 
-<h1>Dashboard</h1>
+<!-- <h4 class="text-center my-2">Dashboard</h4> -->
 {% include 'accounts/status.html'%}
-<div class="row  ">
+<div class="row ">
 
 
-    <div class="col-12  col-md-6">
+    <div class="col-12  col-md-6 col-lg-4">
         <div class="card card-body mb-2 ">
-            <h3>Customer</h3>
+            <h3>Customers</h3>
             <hr style="margin: 2px 0 10px 0;"/>
 
 
-            <a class="btn btn-primary  w-100">Create Customer</a>
+            <!-- <a class="btn btn-primary  w-100"  href="{% url 'createCustomer' %}">Create Customer</a> -->
 
+            <div class="table-responsive">
+
+            
             <table class="table table-hover mt-2">
                 <thead>
                     <tr class="table-info text-center">
@@ -34,13 +37,14 @@
                 </tbody>
             </table>
         </div>
+        </div>
     </div>
 
-    <div class="col-12 col-md-6">
+    <div class="col-12 col-md-6 col-lg-8">
         <div class="card card-body  ">
             <h3>Last 5 Orders</h3>
             <hr style="margin: 2px 0 10px 0;"/>
-            <a class="btn btn-primary w-100" href="{% url 'orders' %}">Create Order</a>
+            <!-- <a class="btn btn-primary w-100" href="{% url 'orders' %}">Create Order</a> -->
             <div class="table-responsive">
                 <table class="table table-hover mt-2">
                     <thead>
