--- a/accounts/templates/accounts/status.html
+++ b/accounts/templates/accounts/status.html
@@ -1,4 +1,4 @@
-<div class="row mb-3">
+<div class="row my-3">
     <div class="col-12 col-md-4">
 
         <div class="card text-center mb-3" id="total-orders">
