--- a/accounts/templates/accounts/orderForm.html
+++ b/accounts/templates/accounts/orderForm.html
@@ -11,7 +11,23 @@
             <form method="POST">
                 {% csrf_token%}
 
-                    {{form|crispy}}
+                    <!-- {{formSet|crispy}} -->
+                    {{ formSet.management_form }}
+                    {% for form in formSet %}
+                    <div class="card card-body  mx-0 mb-2 px-2">
+
+                    <div class="row ">
+                            <div class="col-6 ">
+                                {{form.product|as_crispy_field}}
+                            </div>
+                            <div class="col-6">
+                                {{form.status|as_crispy_field}}
+                            </div>
+                        </div>
+                        
+
+                    </div>
+                    {% endfor%}
 
                     <div class="mb-3">
                         <input class="btn btn-success btn-block" type="submit" name="Submit" value="{{option}}"  />
