--- a/accounts/templates/accounts/Navbar.html
+++ b/accounts/templates/accounts/Navbar.html
@@ -21,4 +21,6 @@
         </ul>
       </div>
     </div>
+    <span>Hello, </span>
+    <span><a href="{% url 'logout' %}" >Log Out</a></span>
   </nav>
