--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,1 +1,70 @@
-<h3>{{login}}</h3>
+{% load static %}
+<!-- {% load  crispy_forms_tags %} -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login</title>
+     <!--Bootstrap CDN-->
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+     <link rel="stylesheet" href="{% static '/css/register.css' %}" />
+ 
+     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+     <!--fontawesome-->
+     <script src="https://kit.fontawesome.com/139cea1352.js" crossorigin="anonymous"></script>
+</head>
+<body>
+<div class="container">
+    <div class="row mt-3">
+        <div class="col-12 col-md-4 mx-auto ">
+            <div class="card">
+
+            <div class="card-header text-center">
+                <h3 class="card-title">Login</h3>
+            </div>
+            <div class="card-body">
+                <form method="POST"  >
+                    {% csrf_token %}
+                    <div class="form-group">
+                        <label for="userName" class="form-label" >Username</label>
+                        <input type="text" name="username" class="form-control"  id="userName"/>
+
+                    </div>
+                    <div class="form-group">
+                        <label for="pass" class="form-label">Password</label>
+                        <input type="password" name="password" class="form-control" id="pass" />
+
+                    </div>
+        
+                  
+
+                    <input class="btn btn-success btn-block" type="submit" name="createUser" value="Login"/>
+                
+                </form>
+                <div class="d-flex justify-content-center mt-3 ">
+                <small  >Don't have an account? <a href="{% url 'register' %}">Sign In</a></small>
+
+                </div>
+                <div class="mt-2">
+                    {% for message in messages %}
+                        {% if message.tags == 'success'%}
+                            <div class="alert alert-success" role="alert" >{{message}}</div>
+                        {% else %}    
+                        <div class="alert alert-danger" role="alert" >{{message}}</div>
+                        {% endif %}
+                    {% endfor%}
+                </div>
+            </div>
+        </div>
+
+        </div>
+    
+    </div>
+</div>
+    
+        
+</body>
+</html>
