--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -1,1 +1,52 @@
-<h3>{{register}}</h3>
+{% load static %}
+{% load  crispy_forms_tags %}
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Register</title>
+     <!--Bootstrap CDN-->
+     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+     <link rel="stylesheet" href="{% static '/css/register.css' %}" />
+ 
+     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+     <!--fontawesome-->
+     <script src="https://kit.fontawesome.com/139cea1352.js" crossorigin="anonymous"></script>
+</head>
+<body>
+<div class="container contenedor">
+    <div class="row mt-3">
+        <div class="col-12 col-md-4 mx-auto ">
+            <div class="card tarjeta">
+
+            <div class="card-header text-center">
+                <h3 class="card-title">Register</h3>
+            </div>
+            <div class="card-body">
+                <form method="POST"  >
+                    {% csrf_token %}
+                    <!-- {{form|crispy}} -->
+                    {{form.username|as_crispy_field}}
+                    {{form.email|as_crispy_field}}
+                    {{form.password1|as_crispy_field}}
+                    {{form.password2|as_crispy_field}}
+
+
+                    <input class="btn btn-success btn-block" type="submit" name="createUser" value="Register"/>
+                
+                </form>
+              
+            </div>
+        </div>
+
+        </div>
+    
+    </div>
+</div>
+    
+        
+</body>
+</html>
