--- a/accounts/templates/accounts/Navbar.html
+++ b/accounts/templates/accounts/Navbar.html
@@ -1,26 +1,19 @@
 {% load static %}
 
-<nav class="navbar  navbar-expand-md navbar-dark bg-dark px-3" style="overflow: hidden;"  >
+
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="overflow: hidden;">
     <div class="container-fluid">
       <a class="navbar-brand" href="{% url 'home' %}"><img src="{% static 'images/logo.png' %}" width="40" /></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ">
-          <li class="nav-item  ">
-            <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Dashboard</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{% url 'products' %}">Products</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#"></a>
-          </li>
-          
-        </ul>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav ml-auto">
+          <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Dashboard</a>
+          <a class="nav-link" href="{% url 'products' %}">Products</a>
+          <a class="nav-link" href="{%url 'home'%}"> Hello, {{request.user}}</a>
+          <a class="nav-link" href="{% url 'logout'%}">Log Out</a>
+        </div>
       </div>
     </div>
-    <span>Hello, </span>
-    <span><a href="{% url 'logout' %}" >Log Out</a></span>
   </nav>
