--- a/accounts/templates/accounts/Navbar.html
+++ b/accounts/templates/accounts/Navbar.html
@@ -9,10 +9,14 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ml-auto">
+          {% if request.user.is_staff %}
           <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Dashboard</a>
           <a class="nav-link" href="{% url 'products' %}">Products</a>
+          {% endif %}
+          
           <a class="nav-link" href="{%url 'home'%}"> Hello, {{request.user}}</a>
           <a class="nav-link" href="{% url 'logout'%}">Log Out</a>
+         
         </div>
       </div>
     </div>
