--- a/accounts/templates/accounts/mainResetPass.html
+++ b/accounts/templates/accounts/mainResetPass.html
@@ -1,11 +1,12 @@
+
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CRM</title>
-    
+    <title>Reset Password</title>
     <!--Bootstrap CDN-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static '/css/main.css' %}" />
@@ -14,22 +15,15 @@
     <!--fontawesome-->
     <script src="https://kit.fontawesome.com/139cea1352.js" crossorigin="anonymous"></script>
 </head>
-<body >
+<body>
+    
 
-    {% include 'accounts/Navbar.html'%}
-   
+    <div class="container-sm mt-4 "  >
+    {%block content%}
 
-    <div class="container-sm "  >
 
-        {% block content%}
-
-        {% endblock %}
-      
+    {%endblock%}
     </div>
-    <!-- <hr/> -->
-    <!-- <h5>Our Footer</h5> -->
-
-   
 
 
 
